[package]
name = "cedarwood"
description = "efficiently-updatable double-array trie in Rust (ported from cedar)"
repository = "https://github.com/MnO2/cedarwoord"
version = "0.1.0"
license = "MIT"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["trie", "darts", "string", "search", "text"]
categories = ["data-structures", "text-processing"]
edition = "2018"
exclude = ["/benches/**", "/.travis.yml"]

[badges]
travis-ci = { repository = "MnO2/cedarwood" }
codecov = { repository = "MnO2/cedarwood" }

[features]
default = []
#reduced-trie = []

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "cedarwood_benchmark"
harness = false
required-features = []

[dependencies]
